--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,15 @@
 		<finalName>nextprot-queries</finalName>
 	</build>
 
+        <distributionManagement>
+                <snapshotRepository>
+                        <id>nextprot-snapshot-repo</id>
+                        <url>http://miniwatt:8800/nexus/content/repositories/nextprot-snapshot-repo</url>
+                </snapshotRepository>
+                <repository>
+                        <id>nextprot-repo</id>
+                        <url>http://miniwatt:8800/nexus/content/repositories/nextprot-repo</url>
+                </repository>
+        </distributionManagement>
+
 </project>
